--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -5,7 +5,7 @@
   <button cdkStepperPrevious class="btn btn-outline-primary">
     <i class="fa fa-angle-left"></i> Back to Delivery
   </button>
-  <button cdkStepperNext class="btn btn-outline-primary">
+  <button cdkStepperNext class="btn btn-outline-primary" (click)="createPaymentIntent()">
     Go to Payment <i class="fa fa-angle-right"></i>
   </button>
 </div>
