--- a/client/src/app/shared/components/pager/pager.component.html
+++ b/client/src/app/shared/components/pager/pager.component.html
@@ -3,6 +3,7 @@
   [totalItems]="totalCount"
   (pageChanged)="onPagerChanged($event)"
   [itemsPerPage]="pageSize"
+  [ngModel]="pageNumber"
   previousText="&lsaquo;"
   nextText="&rsaquo;"
   firstText="&laquo;"
